forward to project page

--- a/index.html
+++ b/index.html
@@ -1,88 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>raphaelr/nice-enum @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #e6e0e0;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #191f1f; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #191f1f; }
-    h3 { text-align: center; color: #191f1f; }
-    a { color: #191f1f; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
-</head>
-
-<body>
-  <a href="http://github.com/raphaelr/nice-enum"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/raphaelr/nice-enum/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/raphaelr/nice-enum/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/raphaelr/nice-enum">nice-enum</a>
-      <span class="small">by <a href="http://github.com/raphaelr">raphaelr</a></span></h1>
-
-    <div class="description">
-      Nice Enumeration classes for Ruby
-    </div>
-
-    <p>This gem brings C#/Java-like enumerations to Ruby. They format correctly (just like in C# and Java), can have attributes and methods (just like in Java) and format correctly even if or'd together (just like in C#)!</p><h2>Install</h2>
-<p>gem install nice-enum
-- or -
-git clone git://github.com/raphaelr/nice-enum.git
-cd nice-enum
-rake install</p>
-<h2>License</h2>
-<p>BSD 3-Clause, see LICENSE.</p>
-<h2>Authors</h2>
-<p>Raphael Robatsch (raphaelr@f-m.fm)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Raphael Robatsch (raphaelr@f-m.fm)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/raphaelr/nice-enum/zipball/master">zip</a> or
-      <a href="http://github.com/raphaelr/nice-enum/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/raphaelr/nice-enum</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/raphaelr/nice-enum">raphaelr/nice-enum</a>
-    </div>
-
-  </div>
-
-  
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Nice Enumerations for Ruby</title>
+		<meta http-equiv="refresh" content="0;url=http://github.com/raphaelr/nice-enum"> 
+		<script type="text/javascript">
+			document.location.href = "http://github.com/raphaelr/nice-enum";
+		</script>
+	</head>
+	<body>
+		<h1>Nice Enumerations for Ruby</h1>
+		
+		<p>You can visit the <a href="http://github.com/raphaelr/nice-enum">main project page</a>
+		or browse the <a href="http://rubydoc.info/github/raphaelr/nice-enum/master/frames">documentation.</a>
+	</body>
 </html>
