Fixed redirect URLs

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<title>Nice Enumerations for Ruby</title>
 		<meta http-equiv="refresh" content="0;url=http://github.com/raphaelr/nice-enum"> 
 		<script type="text/javascript">
-			document.location.href = "http://github.com/raphaelr/nice-enum";
+			document.location.href = "http://github.com/raphaelr/nice_enum";
 		</script>
 	</head>
 	<body>
 		<h1>Nice Enumerations for Ruby</h1>
 		
-		<p>You can visit the <a href="http://github.com/raphaelr/nice-enum">main project page</a>
-		or browse the <a href="http://rubydoc.info/github/raphaelr/nice-enum/master/frames">documentation.</a>
+		<p>You can visit the <a href="http://github.com/raphaelr/nice_enum">main project page</a>
+		or browse the <a href="http://rubydoc.info/github/raphaelr/nice_enum/master/frames">documentation.</a>
 	</body>
 </html>
